# retrochimera

./: .pre-commit-config.yaml  CHANGELOG.md  DEVELOPMENT.md  README.md  SUPPORT.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
bench/: .gitignore  baseline_meta.txt  bench_one.sh  compare.py  log.jsonl  profile_transformer.py  run_bench.py
retrochimera/: README.md  __init__.py  _inference_flags.py
retrochimera.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
retrochimera/chem/: descriptors.py  fixing.py  rewrite.py  rule_application_server.py  rules.py  utils.py
retrochimera/cli/: augment_rsmiles.py  build_tokenizer.py  deduplicate_dataset.py  eval.py  extract_templates.py  optimize_ensembles.py  preprocess.py  run_search.py  split_dataset.py  train.py
retrochimera/data/: dataset.py  processed_dataset.py  processing.py  smiles_reaction_sample.py  smiles_tokenizer.py  template_reaction_sample.py  utils.py
retrochimera/data/preprocessing/: smiles_transformer.py  template_classification.py  template_localization.py
retrochimera/dgllife/: README.md  featurizers.py
retrochimera/encoders/: base.py  chem.py  configs.py  featurizers.py  gnn.py
retrochimera/inference/: __init__.py  ensemble.py  nullmodel.py  retrochimera.py  smiles_transformer.py  smiles_transformer_forward.py  template_classification.py  template_localization.py
retrochimera/layers/: aggregation.py  mlp.py  normalization.py
retrochimera/models/: lightning.py  smiles_transformer.py  template_classification.py  template_localization.py
retrochimera/opennmt/: README.md
retrochimera/opennmt/decode/: beam_search.py  decoder_strategy.py  translator.py
retrochimera/opennmt/modules/: alibi_position_bias.py  average_attention.py  moe.py  multi_head_attention.py  position_ffn.py  rmsnorm.py  (+2 more)
retrochimera/utils/: _persistent_pool.py  logging.py  misc.py  pytorch.py  pytorch_lightning.py  root_aligned.py  root_aligned_score.py  training.py
tests/: conftest.py
tests/chem/: test_descriptors.py  test_fixing.py  test_rewrite.py  test_rule_application_server.py  test_rulebase.py  test_rules.py  test_rxns.smiles  test_template_extraction.py  test_utils.py
tests/data/: test_dataset.py  test_processing.py
tests/encoders/: test_encoders.py  test_featurizers.py
tests/integration/: conftest.py  test_integration.py
tests/models/: test_train_e2e.py
tests/testdata/: guacamol_100_smiles.txt  uspto_reactions.smi
(+11 files in other folders)
